*** HEAD CONTENT *****************************************************************
**********************************************************************************
  
  What's new in this drop
  ================================================================================

  PRs Fixed in this Release
  ================================================================================

  PRs Closed in this Release
  ===============================================================================


**********************************************************************************
*** BUILD ??? (2.0 STREAM, v_201_02) *********************************************
**********************************************************************************

  What's new in this drop
  ================================================================================
  * New AST node for empty statements (org.eclipse.jdt.internal.compiler.ast.EmptyStatement)
  	i.e. 2 more APIs on the AST visitor.
	Note: this was not an official API
  * ISourceElementRequestor notifies enter/exit initializers instead of just acceptInitializer.
	Note: this was not an official API
  * Search in inner-classes now works. Indexes are recomputed automatically on start-up.
  * Removed CodeAssist option for hungry mode (org.eclipse.jdt.core.codeComplete.entireWordReplacement)
  	Client code can decide whether using inferred end position (hungry behavior) or original cursor location (insert behavior)
  	based on the keystroke (enter/insert?).
  * org.eclipse.jdt.core.search.IJavaSearchResultCollector now clearly states that
    the order of the search result is unspecified.
  	
  PRs Fixed in this Release
  ================================================================================
  1GK2A45: ITPJCORE:WIN2000 - JCK 1.4 - possibly assigned variable after assignment expression when true 