@@ -129,8 +129,8 @@ status.noLocalContents = Cannot find local contents for resource: {0}
 classpath.cycle = A cycle was detected in the project's classpath.
 classpath.buildPath = Build path
 classpath.cannotNestSourceFolderInSource = Cannot nest source folder {0} inside source folder {1}.
-classpath.cannotNestSourceFolderInOutput = Cannot nest source folder {0} inside output location {1}.
-classpath.cannotNestOuputInSourceFolder = Cannot nest output location {0} inside source folder {1}.
+classpath.cannotNestEntryInOutput = Cannot nest entry {0} inside output location {1}.
+classpath.cannotNestOutputInEntry = Cannot nest output location {0} inside entry {1}.
 classpath.unboundVariablePath = Unbound variable path: {0}.
 classpath.illegalVariablePath = Illegal variable path: {0}.
 classpath.nullVariablePath = Variable path cannot be null.
